changes to first section

--- a/DrugaStrona.html
+++ b/DrugaStrona.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section id="dziennik">
-            <li class="Lista">Tydzień pierwszy(rozpoczęty w tygodniu drugim):</li>
+            <article class="Lista">Tydzień pierwszy(rozpoczęty w tygodniu drugim):</article>
             <p>
                 1. Odczucia pozytywne, język przekazu zrozumiały i czytelny
             </p>
