New things to the project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1 class="Naglowek">
             Michał Orzechowski <br />
             <img
-              src="g:\Michał\zdjecia\zdjecia\DSC00703.JPG"
+              src="G:\DeveloperWTF\homepage\DSC00703.JPG"
               alt="Michał"
               style="width: 100 px; height: 100px;"
             />
