css new features

--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">Strona główna</a>
-        <a href="DrugaStrona.html">Dziennik</a>
+        <a href="index.html" class="Navigation Navigation__Header">Strona główna</a>
+        <a href="DrugaStrona.html" class="Navigation Navigation__Header">Dziennik</a>
       </nav>
     </header>
     <main>
       <header>
         <section id="Omnie">
-          <h1 class="Naglowek">
+          <h1 class="Naglowek naglowek__heading--title">
             Michał Orzechowski <br />
-            <img
-              src="G:\DeveloperWTF\homepage\DSC00703.JPG"
+            
+          </h1>
+        </section>
+        <section>
+          <img class="Naglowek naglowek__heading--img"
+              src="DSC00703.JPG"
               alt="Michał"
               style="width: 100 px; height: 100px;"
             />
-          </h1>
-
+        </section>  
           <h2>Dziennki postępów WTF: Co ten Frontend :P</h2>
-        </section>
+        
       </header>
     </main>
     <footer>
