--- a/DrugaStrona.html
+++ b/DrugaStrona.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="DrugaStrona.html">Dziennik</a>
+            <a href="index.html"class="Navigation Navigation__Header">Strona główna</a>
+            <a href="DrugaStrona.html" class="Navigation Navigation__Header">Dziennik</a>
         </nav>
 
     </header>
