created new html to inject JS, updated DS and css

--- a/DrugaStrona.html
+++ b/DrugaStrona.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="Header header__main">
         <nav>
             <a href="index.html"class="Navigation Navigation__Header">Strona główna</a>
             <a href="DrugaStrona.html" class="Navigation Navigation__Header">Dziennik</a>
@@ -36,7 +36,7 @@
             <p>
                 Zabawa ze zmianą danych w przeglądarce
             </p>
-            Tydzień trzceci:
+            Tydzień trzeci:
             <p>Założenie Trello</p>
             <p>
                 Dodanie nowego pliku do Katalogu homepage
@@ -47,6 +47,14 @@
             <p>
                 Stworzenie nawigacji
             </p>
+            <p>
+                Tydzień Czwarty
+            </p>
+            <p>
+                1.Tworzenie narzędzi BEM
+            </p>
+            <p>2. integracja z Gitem i GitHubem</p>
+            <p>3. Dodawanie nowych feacherów do istniejącego projektu</p>
         </section>
     </main>
     <footer>
