apply changes to kontakt.html with js

--- a/DrugaStrona.html
+++ b/DrugaStrona.html
@@ -13,6 +13,7 @@
         <nav>
             <a href="index.html"class="Navigation Navigation__Header">Strona główna</a>
             <a href="DrugaStrona.html" class="Navigation Navigation__Header">Dziennik</a>
+            <a href="kontakt.html" class="Navigation Navigation__Header">Kontakt</a>
         </nav>
 
     </header>
@@ -59,7 +60,9 @@
     </main>
     <footer>
         Michał Orzechowski, Dziennik postępów programu WTF: Co Ten Frontend?
+       
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
