--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <nav>
         <a href="index.html" class="Navigation Navigation__Header">Strona główna</a>
         <a href="DrugaStrona.html" class="Navigation Navigation__Header">Dziennik</a>
+        <a href="kontakt.html" class="Navigation Navigation__Header">Kontakt</a>
       </nav>
     </header>
     <main>
