--- a/DrugaStrona.html
+++ b/DrugaStrona.html
@@ -18,45 +18,42 @@
 
     </header>
     <main>
-        <section id="dziennik">
-            <article class="Lista">Tydzień pierwszy(rozpoczęty w tygodniu drugim):</article>
-            <p>
-                1. Odczucia pozytywne, język przekazu zrozumiały i czytelny
+        <div class="box-second" id="dziennik">
+            <p>Tydzień pierwszy(rozpoczęty w tygodniu drugim):</p>
+            <p>Odczucia pozytywne, język przekazu zrozumiały i czytelny
             </p>
-            <p>
-                2. Narzędzia do pracy, korzystam i chwalę wykorzystanie
+            <p>Narzędzia do pracy, korzystam i chwalę wykorzystanie
             </p>
-            <p>
-                3. Troszkę o mnie :Początkujący programista obecnie w technologiach Microsoftowych: C#, .NET, Xamarin
+            <p>Troszkę o mnie :Początkujący programista obecnie w technologiach Microsoftowych: C#, .NET, Xamarin
             </p>
-
-            Tydzień drugi:
+        </div>
+        <div class="box-second">
+            <p>Tydzień drugi:</p>
             <p>Dodawanie nowych styli</p>
             <p>Utworzenie nowego katalogu</p>
             <p>Zmiana kolorów</p>
-            <p>
-                Zabawa ze zmianą danych w przeglądarce
-            </p>
-            Tydzień trzeci:
+            <p>Zabawa ze zmianą danych w przeglądarce</p>
+        </div>
+        <div class="box-second">
+             <p>Tydzień trzeci:</p>
             <p>Założenie Trello</p>
-            <p>
-                Dodanie nowego pliku do Katalogu homepage
+            <p>Dodanie nowego pliku do Katalogu homepage
             </p>
-            <p>
-                Dodanie zdjęć do każdego nowego pliku html
+            <p>Dodanie zdjęć do każdego nowego pliku html
             </p>
-            <p>
-                Stworzenie nawigacji
+            <p>Stworzenie nawigacji
             </p>
-            <p>
-                Tydzień Czwarty
+        
+        </div>
+        <div class="box-second">
+             <p>Tydzień Czwarty</p>
             </p>
             <p>
                 1.Tworzenie narzędzi BEM
             </p>
             <p>2. integracja z Gitem i GitHubem</p>
             <p>3. Dodawanie nowych feacherów do istniejącego projektu</p>
-        </section>
+        </div>  
     </main>
     <footer>
         Michał Orzechowski, Dziennik postępów programu WTF: Co Ten Frontend?
