new things added

--- a/DrugaStrona.html
+++ b/DrugaStrona.html
@@ -54,6 +54,24 @@
             <p>2. integracja z Gitem i GitHubem</p>
             <p>3. Dodawanie nowych feacherów do istniejącego projektu</p>
         </div>  
+        <div class="box-second">
+            <p>Tydzień Piąty</p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+        <div class="box-second">
+            <p>Tydzień Szósty</p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+        <div class="box-second">
+            <p>Tydzień Siódmy</p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
     </main>
     <footer>
         Michał Orzechowski, Dziennik postępów programu WTF: Co Ten Frontend?
