--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <main>
       <header>
         <section id="Omnie">
-          <h1 class="Naglowek naglowek__heading--title">
-            Michał Orzechowski <br />
-            
-          </h1>
+          <h1 class="head__title head-title__js"></h1>
         </section>
         <section>
           <img class="Naglowek naglowek__heading--img"
