--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
         <h1 class="heading-contact heading-contact--js"></h1>
     </section>
     </main>
-    <footer class="Foot-contact Foot-contact--js">
+    <footer class="Foot-contact Foot_contact--js">
         Michał Orzechowski, Dziennik postępów programu WTF: Co Ten Frontend?
        
     </footer>
