--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         
       </header>
     </main>
-    <footer>
-      Michał Orzechowski, Dziennik postępów programu WTF: Co Ten Frontend?
-    </footer>
+    <footer class="foot">Michał Orzechowski, Dziennik postępów programu WTF: Co Ten Frontend?</footer>
     <script src="main.js"></script>
   </body>
 </html>
